--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,41 @@
+############################################################
+# .gitignore for Data-Analysis-Projects (root of repo)
+############################################################
+
+# ====================================
+# 1. OPERATING SYSTEM / ENV ARTIFACTS
+# ====================================
+
+# macOS metadata files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails (Windows)
+Thumbs.db
+
+# Windows image file caches
+ehthumbs.db
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# VS Code workspace history 
+.history/
+
+# Temporary files
+*.swp
+*~
+*.tmp
+*.temp
+
+# ====================================
+# 2. PYTHON-RELATED
+# ====================================
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -19,16 +57,19 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
+# Virtual environments
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -46,7 +87,6 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
-*.py,cover
 .hypothesis/
 .pytest_cache/
 cover/
@@ -59,7 +99,6 @@ cover/
 *.log
 local_settings.py
 db.sqlite3
-db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -72,89 +111,175 @@ instance/
 docs/_build/
 
 # PyBuilder
-.pybuilder/
 target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# Jupyter Notebook checkpoints & output
+.ipynb_checkpoints/
+**/.ipynb_checkpoints/
+*.ipynb_checkpoints
 
-# IPython
+# IPython history
 profile_default/
 ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+# ====================================
+# 3. R / RSTUDIO-RELATED 
+# ====================================
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+# History files
+.Rhistory
+.Rapp.history
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+# Session Data files
+.RData
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
+# Example code in package build process
+*-Ex.R
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+# RStudio files
+.Rproj.user/
+.Rproj.user/**
+.Ruserdata
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+# Produced vignettes
+vignettes/*.html
+vignettes/*.pdf
 
-# SageMath parsed files
-*.sage.py
+# R data files
+*.rda
+*.rdb
+*.rdx
 
-# Environments
-.env
-.venv
-env/
+# ====================================
+# 4. JUPYTER NOTEBOOK / DATA ANALYSIS
+# ====================================
+
+# Notebook checkpoints 
+.ipynb_checkpoints/
+**/.ipynb_checkpoints/
+
+# Common data files 
+*.csv
+*.tsv
+*.xls
+*.xlsx
+*.parquet
+*.feather
+
+# Cache or intermediate data exports 
+data/tmp/
+data/intermediate-exports/
+
+# ====================================
+# 5. VIRTUAL ENVIRONMENTS / PACKAGE MANAGEMENT
+# ====================================
+
+# Python virtualenv 
 venv/
 ENV/
-env.bak/
-venv.bak/
+env/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Conda environment folder
+.conda/
+*.conda
+*.env
 
-# Rope project settings
-.ropeproject
+# Poetry
+poetry.lock
 
-# mkdocs documentation
-/site
+# Pipenv
+Pipfile.lock
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+# ====================================
+# 6. IDE / EDITOR CONFIGURATION
+# ====================================
 
-# Pyre type checker
-.pyre/
+# VS Code
+.vscode/
+.vscode/**
+*.code-workspace
 
-# pytype static type analyzer
-.pytype/
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
 
-# Cython debug symbols
-cython_debug/
+# JetBrains IDEs (PyCharm, IntelliJ, RStudio, etc.)
+.idea/
+*.iml
+*.iws
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# Eclipse
+.metadata/
+*.tmp
+*.bak
+*.swp
+
+# Mac-specific
+*.DS_Store
+
+# Windows-specific
+Thumbs.db
+ehthumbs.db
+
+# ====================================
+# 7. LOGS, REPORTS, AND OUTPUT
+# ====================================
+
+# General logs
+*.log
+logs/
+
+# Model artifacts / pickles
+*.h5
+*.hdf5
+*.pickle
+*.pkl
+*.joblib
+
+# Output folders (charts, HTML reports, PDFs) 
+output/
+reports/tmp/
+reports/html/
+/reports/pdf/
+
+# ====================================
+# 8. DATA FILES & DATABASES
+# ====================================
+
+# SQLite database files
+*.sqlite
+*.db
+
+# SQL database dumps
+*.sql
+
+# Apache Parquet, Feather, etc.
+*.parquet
+*.feather
+
+# Common big‐data / binary data
+*.bin
+*.dat
+
+# ====================================
+# 9. OTHER LANGUAGES / TOOLS 
+# ====================================
+
+# Node.js / JavaScript dependencies 
+node_modules/
+
+# Java / Maven
+target/
+*.jar
+*.war
+
+# C / C++ compiled objects
+*.o
+*.obj
+*.so
+*.dll
+*.exe
+
+############################################################
+# END OF .gitignore
+############################################################
